third_party/move/move-compiler/tests/move_check/parser/num_hex_literal_underscore_leading.exp
error[E03009]: unbound variable
  ┌─ tests/move_check/parser/num_hex_literal_underscore_leading.move:4:17
  │
4 │         let _ = _0x0u8;
  │                 ^^^^^^ Invalid variable usage. Unbound variable '_0x0u8'

