third_party/move/move-compiler/tests/move_check/parser/num_hex_literal_underscore_leading.move
module 0x42::M {
    fun t() {
        // Leading underscore not allowed
        let _ = _0x0u8;
    }
}
